<resources>
    <string name="app_name">EZMeal</string>
    <string name="login">Login</string>
    <string name="mdp">Mot de passe</string>
    <string name="button_connexion">Connexion</string>
    <string name="button_register">S\'enregistrer</string>

    <string name="text_accounts">Information du compte</string>
    <string name="hint_name">Nom *</string>
    <string name="hint_first_name">Prénom *</string>
    <string name="hint_email">Email *</string>
    <string name="hint_login">Login *</string>
    <string name="hint_password">Mot de passe *</string>
    <string name="hint_confirm_password">Confirmer mot de passe *</string>
    <string name="hint_birthday">Date de naissance (JJ/MM/AAAA)</string>
    <string name="hint_sex">Sexe (M/F)</string>
    <string name="hint_lang">Langue (FR/EN/ES) *</string>
    <string name="hint_oblig">* Champs obligatoires</string>
    <string name="text_login">Se connecter</string>
    <string name="text_register">S\'enregistrer</string>
    <string name="error_message_login">Entrez un login</string>
    <string name="error_message_other_login">Ce login existe déjà</string>
    <string name="error_message_name">Entrez votre nom</string>
    <string name="error_message_first_name">Entrez votre prénom</string>
    <string name="error_message_email">Entrez un email valide</string>
    <string name="error_message_valid_birthday">Entrez une date de naissance valide (JJ/MM/AAAA)</string>
    <string name="error_message_password">Entrez votre mot de passe</string>
    <string name="error_message_lang">Entrez votre langue</string>
    <string name="error_message_valid_langue">Entrez une langue valide (FR ou EN ou ES)</string>
    <string name="error_message_valid_sex">Entrez un sexe valide (M ou F)</string>
    <string name="success_message">Enrigistrement réussi</string>
    <string name="text_not_member">Pas encore de compte? Crées-en un</string>
    <string name="text_already_member">Déjà membre? Connecte-toi</string>
    <string name="error_email_exists">Cette email existe déjà</string>
    <string name="error_password_match">Les mots de passe ne concordent pas</string>
    <string name="error_valid_email_password">Mauvais email ou mot de passe</string>
    <string name="action_settings">Paramètres</string>
    <string name="text_hello">Bonjour,</string>
    <string name="text_title">EZMeal</string>
    <string name="hint_top_week">Top 3 de la semaine</string>
    <string name="hint_top">Top 3 des recettes</string>
    <string name="action_search">Recherche</string>
    <string name="action_account">Compte</string>
    <string name="action_home">Home</string>
    <string name="hint_last_recettes">Les dernières sorties</string>
    <string name="hint_all_recipe">Toutes les recettes</string>
    <string name="hint_profil">Profil</string>
    <string name="hint_modify">Modifier</string>
    <string name="text_search">Chercher</string>
    <string name="text_browse">Parcourir</string>
    <string name="text_keyword">Mot clé</string>
    <string name="text_type">Type</string>
    <string name="text_types">entrées/salades/desserts/poulets/volailles/viandes/gibiers/poissons/fruits de mer/pâtes/cocktails</string>
    <string name="text_subtypes">chaud/froid/de saison</string>
    <string name="text_subtype">Sous-type</string>
    <string name="text_ingredient">Ingrédient</string>
    <string name="type_starter">Entrée</string>
    <string name="type_salad">Salade</string>
    <string name="type_dessert">Dessert</string>
    <string name="type_poultry">Poulet et volaille</string>
    <string name="type_meat">Viande</string>
    <string name="type_game">Gibier</string>
    <string name="type_fish">Poisson et fruits de mer</string>
    <string name="type_pasta">Pâtes</string>
    <string name="type_cocktail">Cocktail</string>
    <string name="error_notype">Sélectionnez un type de plat</string>
    <string name="error_nocriteria">Sélectionnez au moins un critère de recherche</string>
    <string name="error_message_stars">Entrez une note entre 1 et 5</string>
    <string name="error_message_eval_deja_la">Vous avez déjà laisser un commentaire sur cette recette</string>
    <string name="eval_ok">Vous avez bien laisser un commentaire sur cette recette</string>
    <string name="error_message_liste_vide">Aucun élément trouvé</string>


    <string name="hint_recette">Recette</string>
    <string name="hint_date">Date</string>
    <string name="hint_descprition">Description</string>
    <string name="hint_cuisson">Temps de cuisson:</string>
    <string name="hint_preparation">Temps de preparation:</string>
    <string name="hint_temps_total">Temps total:</string>
    <string name="hint_type">Type:</string>
    <string name="hint_sous_type">Sous Type:</string>
    <string name="hint_level">Niveau:</string>
    <string name="hint_ingredient">Ingredients:</string>
    <string name="hint_steps">Etapes:</string>
    <string name="hint_moyenne">Score moyen:</string>
    <string name="hint_takephoto">Prendre une photo</string>

    <string name="hint_commentaire">Commentaire</string>
    <string name="hint_note">Note (1 à 5)</string>
    <string name="button_evaluer">Evaluer</string>
    <string name="hint_3com">3 derniers commentaires:</string>

</resources>
