<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollViewBrowser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".activities.SearchActivity">

<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textLayoutType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/text_type" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_starter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_starter"
            android:textColor="#FFFFFF"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_salad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_salad"
            android:textColor="#FFFFFF"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_dessert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_dessert"
            android:textColor="#FFFFFF"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_poultry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_poultry"
            android:textColor="#FFFFFF"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_meat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_meat"
            android:textColor="#FFFFFF"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_game"
            android:textColor="#FFFFFF"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_fish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_fish"
            android:textColor="#FFFFFF"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_pasta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_pasta"
            android:textColor="#FFFFFF"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_cocktail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_cocktail"
            android:textColor="#FFFFFF"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonBrowse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorTextHint"
        android:text="@string/text_browse" />

</android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>