<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollViewRecipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".activities.RecipeActivity">



    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imageRecipe"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/recipe1" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewRecipe"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/hint_recette"
            android:textSize="20dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/hint_descprition"
            android:textColor="#D3D3D3"
            android:textSize="12dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="18dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.3"
                android:text="@string/hint_type"
                android:textColor="@color/colorTextHint"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/hint_type"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dp">


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.3"
                android:text="@string/hint_sous_type"
                android:textColor="@color/colorTextHint"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewSubtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/hint_sous_type"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.3"
                android:text="@string/hint_level"
                android:textColor="@color/colorTextHint"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/hint_level"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="15dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.3"
                android:text="@string/hint_moyenne"
                android:textColor="@color/colorTextHint"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewMoyenne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/hint_moyenne"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.3"
                android:text="@string/hint_preparation"
                android:textColor="@color/colorTextHint"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewPreparation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/hint_preparation"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dp">


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.3"
                android:text="@string/hint_cuisson"
                android:textColor="@color/colorTextHint"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewCuisson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/hint_cuisson"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.3"
                android:text="@string/hint_temps_total"
                android:textColor="@color/colorTextHint"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewTempsTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/hint_temps_total"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.3"
                android:text="@string/hint_ingredient"
                android:textColor="@color/colorTextHint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.3"
                android:text="@string/hint_ingredient"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.3"
                android:text="@string/hint_steps"
                android:textColor="@color/colorTextHint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.3"
                android:text="@string/hint_steps"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_commentaire"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutStars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextStars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_note"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonPrendrePhoto"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorTextHint"
                android:text="@string/hint_takephoto" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonEvaluer"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:background="@color/colorTextHint"
                android:text="@string/button_evaluer" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.3"
                android:text="@string/hint_3com"
                android:textSize="18dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:weightSum="1">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imageCom1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:src="@drawable/meal_filled"
                android:layout_weight="0.04" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewCom1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Le commentaire" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:weightSum="1">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imageCom2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:src="@drawable/meal_filled"
                android:layout_weight="0.04" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewCom2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Le commentaire" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="40dp"
            android:weightSum="1">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imageCom3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:src="@drawable/meal_filled"
                android:layout_weight="0.04" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewCom3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Le commentaire" />

        </LinearLayout>



        
    </android.support.v7.widget.LinearLayoutCompat>


</android.support.v4.widget.NestedScrollView>